--- a/app/src/main/res/layout/activity_cadastro_perfil.xml
+++ b/app/src/main/res/layout/activity_cadastro_perfil.xml
@@ -47,7 +47,7 @@
             android:inputType="textPersonName"
             android:hint="Nome"
             android:ems="10"
-            android:id="@+id/editText5"
+            android:id="@+id/TextViewNomeAula"
             android:layout_below="@+id/toolbar"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
@@ -56,8 +56,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="149dp"
                 android:hint="Digite aqui a sua bio"
-                android:id="@+id/editTextDescricao"
-            android:layout_below="@+id/editText5"
+                android:id="@+id/TextViewDescricao"
+            android:layout_below="@+id/TextViewNomeAula"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
