--- a/app/src/main/res/layout/activity_editar_aula.xml
+++ b/app/src/main/res/layout/activity_editar_aula.xml
@@ -28,16 +28,17 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
 
-        <EditText
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:hint="Nome da aula"
-            android:id="@+id/editText5"
+            android:id="@+id/TextViewNomeAula"
             android:layout_marginTop="20dp"
             android:layout_below="@+id/toolbar"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:textSize="20sp" />
 
         <Button
             android:text="Confirmar Edição"
@@ -53,39 +54,28 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
-        <EditText
+        <TextView
             android:layout_width="match_parent"
             android:hint="Descrições da aula"
-            android:id="@+id/editTextDescricao"
+            android:id="@+id/TextViewDescricao"
             android:layout_height="wrap_content"
             android:layout_marginTop="27dp"
-            android:layout_below="@+id/editText5"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:ems="10"
-            android:id="@+id/editTextHotasAssistidas"
-            android:hint="Horas de aula fornecidas"
-            android:layout_marginTop="25dp"
-            android:layout_below="@+id/editTextDescricao"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:ems="10"
-            android:id="@+id/editText11"
-            android:hint="Preço por hora/aula"
-            android:layout_above="@+id/button5"
+            android:layout_below="@+id/TextViewNomeAula"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginBottom="26dp" />
+            android:textSize="20sp" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/TextViewHorasDeAula"
+            android:hint="Horas de aula fornecidas"
+            android:layout_marginTop="25dp"
+            android:layout_below="@+id/TextViewDescricao"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
         <Button
             android:text="Add"
@@ -95,7 +85,7 @@
             android:background="#7bc8f3"
             android:textColor="@android:color/background_light"
             android:onClick="populateListView"
-            android:layout_below="@+id/editTextHotasAssistidas"
+            android:layout_below="@+id/TextViewHorasDeAula"
             android:layout_toRightOf="@+id/textViewNome"
             android:layout_toEndOf="@+id/textViewNome"
             android:layout_marginTop="19dp" />
@@ -107,7 +97,7 @@
             android:layout_below="@+id/ButtonAddTag"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_above="@+id/editText11" />
+            android:layout_above="@+id/TextViewPreco" />
 
         <AutoCompleteTextView
             android:layout_width="wrap_content"
@@ -118,6 +108,19 @@
             android:layout_above="@+id/ListViewTags"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/TextViewPreco"
+            android:hint="Preço por hora/aula"
+            android:layout_marginBottom="27dp"
+            android:layout_above="@+id/button5"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:textSize="20sp" />
 
     </RelativeLayout>
 </ScrollView>
