--- a/app/src/main/res/layout/activity_cadastrar_aula.xml
+++ b/app/src/main/res/layout/activity_cadastrar_aula.xml
@@ -32,10 +32,10 @@
         <EditText
             android:layout_width="match_parent"
             android:hint="Digite aqui as descrições da sua aula"
-            android:id="@+id/TextViewDescricao"
+            android:id="@+id/editTextDescricao"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:layout_below="@+id/TextViewNomeAula"
+            android:layout_below="@+id/EditTextNome"
             android:layout_centerHorizontal="true" />
 
         <EditText
@@ -46,7 +46,7 @@
             android:id="@+id/TextViewHorasDeAula"
             android:hint="Horas de aula fornecidas"
             android:layout_marginTop="27dp"
-            android:layout_below="@+id/TextViewDescricao"
+            android:layout_below="@+id/editTextDescricao"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:hint="Nome da aula"
-            android:id="@+id/TextViewNomeAula"
+            android:id="@+id/EditTextNome"
             android:layout_marginTop="20dp"
             android:layout_below="@+id/toolbar"
             android:layout_alignParentLeft="true"
