--- a/app/src/main/res/layout/activity_cadastro_perfil.xml
+++ b/app/src/main/res/layout/activity_cadastro_perfil.xml
@@ -47,7 +47,7 @@
             android:inputType="textPersonName"
             android:hint="Nome"
             android:ems="10"
-            android:id="@+id/TextViewNomeAula"
+            android:id="@+id/EditTextNome"
             android:layout_below="@+id/toolbar"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
@@ -56,8 +56,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="149dp"
                 android:hint="Digite aqui a sua bio"
-                android:id="@+id/TextViewDescricao"
-            android:layout_below="@+id/TextViewNomeAula"
+                android:id="@+id/editTextDescricao"
+            android:layout_below="@+id/EditTextNome"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
@@ -89,16 +89,6 @@
             android:layout_marginRight="33dp"
             android:layout_marginEnd="33dp" />
 
-        <AutoCompleteTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:id="@+id/editTextTag"
-            android:hint="Tag"
-            android:layout_alignBottom="@+id/ButtonAddTag"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -108,6 +98,16 @@
             android:layout_alignParentStart="true"
             android:layout_marginTop="15dp"
             android:layout_above="@+id/button3" />
+
+        <AutoCompleteTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:id="@+id/editTextTag"
+            android:hint="Tag"
+            android:layout_above="@+id/ListViewTags"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
     </RelativeLayout>
 </ScrollView>
