--- a/app/src/main/res/layout/activity_editar_perfil.xml
+++ b/app/src/main/res/layout/activity_editar_perfil.xml
@@ -37,7 +37,7 @@
             android:inputType="textPersonName"
             android:hint="Nome"
             android:ems="10"
-            android:id="@+id/TextViewNomeAula"
+            android:id="@+id/EditTextNome"
             android:layout_below="@+id/toolbar"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
@@ -46,8 +46,8 @@
             android:layout_width="match_parent"
             android:layout_height="149dp"
             android:hint="Digite aqui a sua bio"
-            android:id="@+id/TextViewDescricao"
-            android:layout_below="@+id/TextViewNomeAula"
+            android:id="@+id/editTextDescricao"
+            android:layout_below="@+id/EditTextNome"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
@@ -58,7 +58,7 @@
             android:id="@+id/textView4"
             android:textSize="36sp"
             android:textColor="@android:color/background_light"
-            android:layout_above="@+id/TextViewNomeAula"
+            android:layout_above="@+id/EditTextNome"
             android:layout_centerHorizontal="true" />
 
         <Button
