--- a/app/src/main/res/layout/activity_aula_aluno.xml
+++ b/app/src/main/res/layout/activity_aula_aluno.xml
@@ -92,7 +92,8 @@
             android:layout_marginBottom="72dp"
             android:layout_alignParentBottom="true"
             android:layout_alignLeft="@+id/textViewAvaliadores"
-            android:layout_alignStart="@+id/textViewAvaliadores" />
+            android:layout_alignStart="@+id/textViewAvaliadores"
+            android:visibility="invisible" />
 
         <TextView
             android:text="Horas"
