--- a/app/src/main/res/layout/textview_adapter.xml
+++ b/app/src/main/res/layout/textview_adapter.xml
@@ -41,7 +41,7 @@
         android:text="30"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/price"
+        android:id="@+id/horasCompradas"
         android:textColor="@android:color/background_dark"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
@@ -54,9 +54,9 @@
         android:text="30"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/time"
+        android:id="@+id/horasTotaisCompradas"
         android:textColor="@android:color/background_dark"
-        android:layout_below="@+id/price"
+        android:layout_below="@+id/horasCompradas"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:focusableInTouchMode="false"
@@ -70,8 +70,8 @@
         android:id="@+id/textView11"
         android:textColor="@android:color/background_dark"
         android:layout_alignBottom="@+id/name"
-        android:layout_toLeftOf="@+id/price"
-        android:layout_toStartOf="@+id/price"
+        android:layout_toLeftOf="@+id/horasCompradas"
+        android:layout_toStartOf="@+id/horasCompradas"
         android:layout_marginRight="16dp"
         android:layout_marginEnd="16dp"
         android:focusableInTouchMode="false"
